feature/task/fix Added a README and updated text

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         window.onload = function() {
         // create a couple of elements in an otherwise empty HTML page
         const heading = document.createElement("h1");
-        const heading_text = document.createTextNode("Text written with JavaScript!");
+        const heading_text = document.createTextNode("This Text is written with JavaScript!");
         heading.appendChild(heading_text);
         document.body.appendChild(heading);
     }
